--- a/elements.html
+++ b/elements.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<!--
-	Phantom by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>InfinityWarz-Discord Server!</title>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" type="image" href="images/InfinityWarz Logo.png">
+		<link rel="shortcut icon" type="image" href="images/serverLogo.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -23,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/InfinityWarz Logo.png" alt="" /></span><span class="title"><strong>InfinityWarz</strong></span>
+									<span class="symbol"><img src="images/serverLogo.png" alt="" /></span><span class="title"><strong>MagmaRaidz</strong></span>
 								</a>
 
 							<!-- Nav -->
@@ -43,7 +38,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Rules</a></li>
 							<li><a href="generic1.html">Support</a></li>
-							<li><a href="generic2.html">Store</a></li>
 							<li><a href="elements.html">Discord</a></li>
 						</ul>
 					</nav>
@@ -55,7 +49,7 @@
 
 							<!-- Text -->
 								<section>
-									<h2>Our discord server's invite code is:<strong><a href="https://discord.gg/DW6YzJp"> InfinityWarz</a></h2>
+									<h2>Our discord server's invite code is:<strong><a href="https://discord.gg/YRsdhbM"> MagmaRaidz</a></h2>
 								</section>
 
 							
