--- a/generic.html
+++ b/generic.html
@@ -1,9 +1,9 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>InfinityWarz Official Website-Rules</title>
+		<title>MagmaRaidz Official Website-Rules</title>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" type="image" href="images/InfinityWarz Logo.png">
+		<link rel="shortcut icon" type="image" href="images/serverLogo.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -18,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/InfinityWarz Logo.png" alt="" /></span><span class="title"><strong>InfinityWarz</strong></span>
+									<span class="symbol"><img src="images/serverLogo.png" alt="" /></span><span class="title"><strong>MagmaRaidz</strong></span>
 								</a>
 
 							<!-- Nav -->
@@ -38,7 +38,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Rules</a></li>
 							<li><a href="generic1.html">Support</a></li>
-							<li><a href="generic2.html">Store</a></li>
 							<li><a href="elements.html">Discord</a></li>
 						</ul>
 					</nav>
@@ -48,85 +47,42 @@
 						<div class="inner">
 							<h1><strong>Rules</strong></h1>
 							<span class="image main"><img src="images/RulesBackground.jpg" alt="" /></span>
-							<p><strong>[1] No stealing:</strong><br>
-➥ You can only steal when you are at war with the enemy team, or as revenge.<br>
+							<p>
 
-<strong>[2] No hacking or abusing glitches:</strong><br>
+<strong>[1] No hacking or abusing glitches:</strong><br>
 ➥ No use of hacked clients (or hacks in general, such as chest ESP).<br>
 ➥ No use of exploits.<br>
 ➥ No use of xray.<br>
+➥ No placing blocks like dirt, stone, cobble, grass, clay etc to try to get drops. That will be an instant ban for that game.<br>
 ➥ In general try not to use anything that gives you an advantage over the other players!<br>
 
-<strong>[3] Do not be excessively toxic:</strong><br>
+<strong>[2] Do not be excessively toxic:</strong><br>
 ➥ Not much to explain for this one, just try not to be very toxic in chat.<br>
 
-<strong>[4] Do not use banned items and commands:</strong><br>
-➥ List of banned items can be found in #banned-items.<br>
-➥ Banned commands are things such as doing /home or /tpa during a fight to get out.<br>
 
-<strong>[5] Do not test nukes and missiles:</strong><br>
-➥ Don't test any explosives in the server world.<br>
-➥ Use singleplayer for testing.<br>
-
-<strong>[6] War:</strong><br>
-➥ War is a very OP scenario, and a very brutal one as well. Starting a war with another team allows the use of nukes and missiles on each other's bases. For this reason, there must be a justified reason for war and a member of staff must confirm if you can start a war or not.<br>
-
-➥ If the war is not justified, both teams will be to carry on doing their own thing.<br>
-➥ If the war is justified, and it starts, the declaring team will be tagged first, then the 2nd team.<br>
-
-➥ Both teams do not have to agree on war, only one team can start it.<br>
-➥ Reason must be good enough, and valid.<br>
-<strong>[7] Raids:</strong><br>
-➥ During a raid, you may not do any of the following:<br>
-          - Take everything.<br>
-          - Place C4 on, or around chests (it is okay if you have to toss one or two onto a door to get in).<br>
-          - Purposely blow up / destroy chests.<br>
-          - Mine into / out of the base.<br>
-          - Building (stacking up with blocks) to get over the enemy base wall. Use the entrance to get out (or any side exits if there are any).<br>
-
-<strong>[8] Schematica:</strong><br>
+<strong>[3] Schematica:</strong><br>
 ➥ Schematica and printer are both allowed!<br>
 
-<strong>[9] Imprisonment:</strong><br>
-➥ If you are imprisoned, you are to not use any commands such as /home, /tpa or /back.<br>
-➥ If you are imprisoned, you or or someone else must break you out (unless the team that has captured you, decides to let you go).<br>
-➥ You may only use /msg while imprisoned.<br>
-
-➥ If you have captured a member of staff, please note that they have duties! If they go out of your cell / area of where you have them captured, they will return when they are done with their staff duties.<br>
-➥ Other teams may break you out.<br>
-
-<strong>[10] Enemies, but not at war:</strong><br>
-➥ You can use MCHeli to blow up their base.<br>
-➥ You must not use any missiles or nukes on the enemy base / in general on the enemy.<br>
-
-➥ You must only use MCHeli grenades.<br>
-          - You must not blow up chests.<br>
-➥ You may blow up doors and windows.<br>
-
-➥ Must have a reason to blow up their base. Either as revenge or as part of the story-line.<br>
-➥ You must not blow up over 50% of their base unless at war.<br>
-
-<strong>[11] Bases:</strong><br>
-➥ You must at least have 8x8 area, visible from land or sky.<br>
-➥ May not hide in a small bunker under ground for the entire map.<br>
-➥ Base must be within the 2,500 x 2,500 block border.<br>
-
-➥ Must have a visible entrance from land.<br>
+<strong>[4] Base:</strong><br>
 ➥ Have a sign showing who's base this is.<br>
-<strong>[12] Looting bodies:</strong><br>
-➥ You may only loot non-craftables (food, ores, etc.) if outside your base, or in wild.<br>
-➥ You may only loot the whole body if it's in your base (or in a 30 block radius from your land).<br>
+➥ Your beacon must be in sight where you can reach it.
 
-➥ If an event is going on, they may loot your entire body!<br>
+<strong>[5] Time:</strong><br>
+➥ Make sure you have time to play the gamemode!<br>
+➥ Quitting midgame makes you disqualified.<br>
 
-➥ If at war:<br>
-          - Can loot entire body anywhere.<br>
+<strong>[6] BlackListed Mods:</strong><br>
+- All sorts of minimaps.<br>
+- Chest ESP Mod.<br>
+- Tracers Mod.<br>
+- Freecam Mod.<br>
+- Mods that give you an advantage over other players.<br>
 
-<strong>[13] Bedrock Border:</strong><br>
-➥ You are not allowed to be on the bedrock border.<br>
-➥ You are not allowed to pass the bedrock border.<br></p>
+
+
+						</p>
 						</div>
-					</div>
+					
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/browser.min.js"></script>
