--- a/generic1.html
+++ b/generic1.html
@@ -6,9 +6,9 @@
 -->
 <html>
 	<head>
-		<title>InfinityWarz-Discord Server!</title>
+		<title>MagmaRaidz-Discord Server!</title>
 		<meta charset="utf-8" />
-		<link rel="shortcut icon" type="image" href="images/InfinityWarz Logo.png">
+		<link rel="shortcut icon" type="image" href="images/serverLogo.png">
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
@@ -23,7 +23,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/InfinityWarz Logo.png" alt="" /></span><span class="title"><strong>InfinityWarz</strong></span>
+									<span class="symbol"><img src="images/serverLogo.png" alt="" /></span><span class="title"><strong>MagmaRaidz</strong></span>
 								</a>
 
 							<!-- Nav -->
@@ -43,7 +43,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Rules</a></li>
 							<li><a href="generic1.html">Support</a></li>
-							<li><a href="generic2.html">Store</a></li>
 							<li><a href="elements.html">Discord</a></li>
 						</ul>
 					</nav>
@@ -55,7 +54,7 @@
 
 							<!-- Text -->
 								<section>
-									<h2>Our discord server's invite code is:<strong><a href="https://discord.gg/DW6YzJp"> InfinityWarz</strong></a><br><h2>Please contact our "Staff Members" <strong>On The Discord Server.</strong></h2></h2>
+									<h2>Our discord server's invite code is:<strong><a href="https://discord.gg/YRsdhbM"> MagmaRaidz</strong></a><br><h2>Please contact our "Staff Members" <strong>On The Discord Server.</strong></h2></h2>
 								</section>
 
 							
