--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>InfinityWarz Official Website!</title>
-		<link rel="shortcut icon" type="image" href="images/InfinityWarz Logo.png">
+		<title>MagmaRaidz's Official Website!</title>
+		<link rel="shortcut icon" type="image" href="images/serverLogo.png">
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,7 +18,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/InfinityWarz Logo.png" alt="" /></span><span class="title"><strong>InfinityWarz</strong></span>
+									<span class="symbol"><img src="images/serverLogo.png" alt="" /></span><span class="title"><strong>MagmaRaidz</strong></span>
 								</a>
 
 							<!-- Nav -->
@@ -38,7 +38,6 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Rules</a></li>
 							<li><a href="generic1.html">Support</a></li>
-							<li><a href="generic2.html">Store</a></li>
 							<li><a href="elements.html">Discord</a></li>
 						</ul>
 					</nav>
@@ -47,7 +46,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hello and welcome to <span class="ServerName"> InfinityWarz</span> Mc-War server<br />
+								<h1>Hello and welcome to <span class="ServerName"> MagmaRaidz</span> Hide Or Hunt<br />
 								Website designed by <a href="https://www.winspectindia.com/oldsite/port/portfolio"><span class="MyName">Blaeriz</span></a> .</h1>
 								<h2>
 
@@ -56,7 +55,7 @@ In <span class="ServerName">Infinitywarz</span> you construct planes, tanks, gun
 You can even create nukes!(there not easy to make)<br>
 Have fun fighting, building and creating your own small country<br>
 Join <span class="ServerName">InfinityWarz</span> Today, Minecraft Server will be out in around a month<br>
-<a href="HTTPS://DISCORD.GG/DW6YZJP">https://discord.gg/DW6YzJp</a><br></h2>
+<a href="HTTPS://DISCORD.GG/YRsdhbM">https://discord.gg/YRsdhbM</a><br></h2>
 							</header>
 							<section class="tiles">
 								<article class="style1">
@@ -78,17 +77,6 @@ Join <span class="ServerName">InfinityWarz</span> Today, Minecraft Server will b
 										<h2>Support</h2>
 										<div class="content">
 											<p>If you need help regarding issues on the <strong>Server</strong> then please <strong>Tag</strong> our <strong>Staff Team</strong>.</p>
-										</div>
-									</a>
-								</article>
-								<article class="style3">
-									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
-									</span>
-									<a href="https://infinitywarzstore.tebex.io/">
-										<h2>Store</h2>
-										<div class="content">
-											<p>You will get <strong>Cool Perks And Perms</strong> upon donating to the server. We need income to keep the server up and running for <strong> You Guys!</strong></p>
 										</div>
 									</a>
 								</article>
