--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hello and welcome to <span class="ServerName"> MagmaRaidz</span> Hide Or Hunt<br />
-								Website designed by <a href="https://www.winspectindia.com/oldsite/port/portfolio"><span class="MyName">Blaeriz</span></a> .</h1>
+								<h1>Hello and welcome to <span class="ServerName"> MagmaRaidz</span> Hide Or Hunt<br /</h1>
 								<h2>
 
 Ever wanted to play on a <span class="ServerName">Minecraft server</span> that's all <span class="ServerName">WAR</span> based??!<br>
