--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 					<div id="main">
 						<div class="inner">
 							<header>
-								<h1>Hello and welcome to <span class="ServerName"> MagmaRaidz</span> Hide Or Hunt<br /</h1>
-								<h2>
+								<h1>Hello and welcome to <span class="ServerName"> MagmaRaidz</span> Hide Or Hunt<br/></h1>
+								
 
 Ever wanted to play on a <span class="ServerName">Minecraft server</span> that's all <span class="ServerName">WAR</span> based??!<br>
 In <span class="ServerName">Infinitywarz</span> you construct planes, tanks, guns and more to fight and defend your territory<br>
